Restyling alignment issue with notebook logo

--- a/app/assets/stylesheets/mr_notebooks.scss
+++ b/app/assets/stylesheets/mr_notebooks.scss
@@ -101,7 +101,7 @@
             grid-column: 1/7;
 
             display: grid;
-            grid-template-columns: 5% 95%;
+            grid-template-columns: 5.5% 95.5%;
             align-items: center;
             cursor: pointer;
             color: rgb(26,26,26);   
